--- a/config.yaml
+++ b/config.yaml
@@ -2,42 +2,33 @@ behaviors:
   SpotMicroBehavior:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 512               
-      buffer_size: 5120             
+      batch_size: 512
+      buffer_size: 10240         # Increased to gather more diverse samples
       learning_rate_schedule: linear
-      learning_rate: 1e-4          
-      beta: 0.0065                    
+      learning_rate: 1e-3          # Increased learning rate for faster learning
+      beta: 0.01                 # Increased entropy coefficient for more exploration
       beta_schedule: linear
-      epsilon: 0.20                  
+      epsilon: 0.20
       epsilon_schedule: linear
-      lambd: 0.95                     
-      num_epoch: 5                   
-      shared_critic: False           
+      lambd: 0.95
+      num_epoch: 10              # More epochs per update to better learn from samples
+      shared_critic: False
     network_settings:
-      num_layers: 2                  
-      hidden_units: 256              
-      normalize: True                
+      num_layers: 2
+      hidden_units: 256
+      normalize: True
       #memory:
-      #  memory_size: 256             
-      #  sequence_length: 16          
+      #  memory_size: 256
+      #  sequence_length: 16    # Consider enabling if partial observability is an issue
     reward_signals:
       extrinsic:
-        gamma: 0.99                  
+        gamma: 0.99
         strength: 1
         network_settings:
-          hidden_units: 256          
+          hidden_units: 256
           num_layers: 2
           normalize: True
-      #curiosity:
-        #strength: 0.002
-        #gamma: 0.82
-        #learning_rate: 3e-4
-        #network_settings:
-          #hidden_units: 256          
-          #num_layers: 2
-          #normalize: True
-    #init_path: "results/Baseline/SpotMicroBehavior/SpotMicroBehavior-2349958.pt"
-    time_horizon: 512               
-    summary_freq: 50000             
-    checkpoint_interval: 50000      
-    max_steps: 10000000000    
+    time_horizon: 512
+    summary_freq: 50000
+    checkpoint_interval: 50000
+    max_steps: 10000000000
